--- a/src/app/components/clients/filter-bar/filter-bar.component.html
+++ b/src/app/components/clients/filter-bar/filter-bar.component.html
@@ -7,7 +7,11 @@
                         <app-date-picker></app-date-picker>
                     </div>
                     <div class="filter-tl">
-
+                        <app-custom-select [(selectedOption)]="selectedOption">
+                            <option custom-option value="Option 1">Option 1</option>
+                            <option custom-option value="Option 2">Option 2</option>
+                            <option custom-option value="Option 3">Option 3</option>
+                        </app-custom-select>
                     </div>
                     <div class="filter-time">
 
