--- a/src/app/components/clients/header/header-content.scss
+++ b/src/app/components/clients/header/header-content.scss
@@ -166,9 +166,21 @@
                 background-color: rgb(240, 240, 240);
             }
         }
+
+        .search-suggest-mobile {
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            background-color: var(--color-light);
+        }
+    }
+
+    .search-mobile.show {
+        display: block !important;
     }
 
 }
+
 
 @media(min-width:1200px) {
     .header-content {
