--- a/src/app/components/clients/header/header.component.scss
+++ b/src/app/components/clients/header/header.component.scss
@@ -16,6 +16,25 @@
         margin: 0 auto;
 
     }
+
+    .header-overlay {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: none;
+        background: #435971;
+        opacity: .5;
+        cursor: pointer;
+        z-index: 999;
+    }
+
+    .header-overlay.show {
+        display: block !important;
+    }
 }
 
 @media(min-width:1200px) {}
