--- a/src/app/components/clients/header/header.component.html
+++ b/src/app/components/clients/header/header.component.html
@@ -11,12 +11,13 @@
             <div class="search-bar">
                 <div class="search-container">
                     <div class="search-content">
-                        <input id="search-input" type="text" placeholder="Dịch vụ bạn đang tìm kiếm ?">
+                        <input id="search-input" type="text" placeholder="Dịch vụ bạn đang tìm kiếm ?" #inputSearch
+                            [(ngModel)]="inputSearchValue" (input)="onChangeInputSearch($event)">
                         <a id="search-icon" href="javascript:void(0)">
                             <i class='bx bx-search'></i>
                         </a>
                     </div>
-                    <div class="search-suggest">
+                    <div *ngIf="toggleSuggest" class="search-suggest">
 
                     </div>
                 </div>
@@ -38,7 +39,7 @@
                 <div class="search-bar-mobile">
                     <input class="search-input-mobile" type="text" name="" id=""
                         placeholder="Dịch vụ bạn đang tìm kiếm ?" #inputSearchMobile
-                        [(ngModel)]="inputSearchMobileValue" (input)="onChangeInputSearch($event)">
+                        [(ngModel)]="inputSearchMobileValue" (input)="onChangeInputSearchMobile($event)">
                     <a class="search-iconClose-mobile" (click)="hideSearchMobile()" href="javascript:void(0)">
                         <i class="bx bx-x"></i>
                     </a>
