--- a/src/app/components/clients/login/login.component.html
+++ b/src/app/components/clients/login/login.component.html
@@ -14,20 +14,24 @@
             <form>
                 <div class="form-group">
                     <label for="username">Email</label>
-                    <input type="text" id="username" name="username" required>
-                    <!-- Thông báo validate -->
-                    <span class="validate-message">Vui lòng nhập email hợp lệ.</span>
+                    <input type="text" id="username" name="username" required (input)="onChangeEmail($event)">
+                    <span *ngIf="invalidEmail" class="validate-message">Vui lòng nhập email hợp lệ.</span>
                 </div>
                 <div class="form-group">
                     <label for="password">Mật khẩu</label>
                     <div class="password-wrapper">
-                        <input type="password" id="password" name="password" required>
-                        <a id="showPassword" href="javascript:void(0)"><i class='bx bx-show'></i></a>
-                        <a id="hidePassword" href="javascript:void(0)"><i class='bx bx-hide'></i></a>
+                        <input [type]="isShowPassword ? 'text' : 'password'" id="password" name="password" required
+                            (input)="onChangePassword($event)">
+                        <a id="showPassword" [class.show]="isShowPassword" href="javascript:void(0)"
+                            (click)="togglePassword()">
+                            <i class='bx bx-show'></i>
+                        </a>
+                        <a id="hidePassword" [class.show]="!isShowPassword" href="javascript:void(0)"
+                            (click)="togglePassword()">
+                            <i class='bx bx-hide'></i>
+                        </a>
                     </div>
-                    <!-- Thông báo validate -->
-                    <span class="validate-message">Mật khẩu phải có ít nhất 6 ký tự.</span>
-                    <!-- Nút "Quên mật khẩu" -->
+                    <span *ngIf="invalidPassword" class="validate-message">Mật khẩu phải có ít nhất 6 ký tự.</span>
                     <a routerLink="" class="forgot-password">Quên mật khẩu?</a>
                 </div>
                 <button type="submit">Đăng nhập</button>
