--- a/src/app/components/clients/login/login.component.scss
+++ b/src/app/components/clients/login/login.component.scss
@@ -84,9 +84,15 @@
                             text-decoration: none;
                             font-size: 20px;
                             color: var(--color-primary);
+                            display: none;
 
                             i {}
 
+                        }
+
+                        #hidePassword.show,
+                        #showPassword.show {
+                            display: block;
                         }
                     }
 
@@ -98,9 +104,11 @@
 
                     .forgot-password {
                         position: absolute;
-                        right: 4px;
+                        top: 100%;
                         color: var(--color-primary);
-                        bottom: -17px;
+                        width: 100%;
+                        right: 0;
+                        text-align: right;
                     }
                 }
 
